[package]
name = "esnipubkey-rs"
version = "0.1.0"
authors = ["thekuwayama <thekuwayama@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dohc = { git = "https://github.com/thekuwayama/dohc-rs" }
failure = "0.1"
clap = "2.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13"
