[package]
name = "esnipubkey"
version = "0.1.0"
authors = ["thekuwayama <thekuwayama@gmail.com>"]
description = "CLI to fetch ESNI public key"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
base64 = "0.13"
chrono = "0.4"
clap = "2.33"
dohc = { git = "https://github.com/thekuwayama/dohc-rs", rev = "43d68d6" }
nom = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
